# NogoWallet

./: .gitignore  README.md  package.json  vite.config.js
.github/workflows/: build.yml
AppAssets/macOS/: README.txt
AppAssets/tvOS/: README.txt
AppAssets/tvOS/AppIcon.appiconset/: Contents.json
AppAssets/watchOS/AppIcon.appiconset/: Contents.json
adapter/src/: storage.js
core/src/: crypto.js
desktop/src-tauri/: Cargo.toml  create-ico.ps1  create-ico.py  create-icon.js  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
service/src/: sdk.js
tests/: crypto.test.js  storage.test.js
web/: index.html
web/public/: manifest.json  sw.js
web/src/: i18n.js  main.js  styles.css
